--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mq",
+  "name": "sass-mq-lib",
   "version": "1.0.0",
-  "description": "A simple, light-weight media queries library",
-  "main": "index.js",
+  "description": "A simple, lightweight media queries library for sass projects",
+  "main": "_mq.scss",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,13 +12,14 @@
   },
   "keywords": [
     "sass",
-    "media",
-    "queries",
+    "css",
+    "media queries",
+    "media query",
     "breakpoints",
     "tools"
   ],
   "author": "francesco improta",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/zetareticoli/mq/issues"
   },
